# space_game

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: display.rs  lib.rs  main.rs
maps/: example.json
server/: Cargo.toml
server/src/: connection.rs  constants.rs  lib.rs  main.rs  object.rs  server.rs  space.rs
server/src/communication/: command.rs  connection.rs  mod.rs
server/src/game/: mod.rs  object.rs  space.rs
server/src/logic/: mod.rs  object.rs  space.rs  space_object.rs  update.rs
server/src/networking/: connection.rs
server/src/ui/: command.rs  display.rs  mod.rs
server/tests/: integration_tests.rs
src/: display.rs  lib.rs  main.rs  object.rs  space.rs
tests/: integration_tests.rs
