[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
clap = { version = "4.3.19", features = ["derive"] }
log = "0.4.19"
bincode = "1.3.3"
server = { version = "0.1.0", path = "../server" }
