[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bus = "2.4.0"
clap = { version = "4.3.19", features = ["derive"] }
glam = { version = "0.24.1", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
